POM Cleaning